--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: isoENV
-Title: isoENV helps you to work with isolated environments
-Version: 0.0.1
+Title: Tools to work with isolated environments for in-memory pipelines in
+    R.
+Version: 0.1.0
 Authors@R: 
     person("Abel", "Vertesy", , "a.vertesy@imba.oeaw.ac.at", role = c("aut", "cre"))
 Author: Abel Vertesy <abel.vertesy@imba.oeaw.ac.at> [aut, cre]
-Description: isoENV is a set of R functions that help you to work with
-    isolated environments
+Description: isoENV is a set of R functions to invoke scripts in isolated,
+    and controlled environments for in-memory pipelines in R. Useful for
+    single-session pipelines and exploratory data analysis.
 License: GPL-3 + file LICENSE
 BugReports: https://github.com/vertesy/isoENV/issues
 Depends: 
+    checkmate,
     Stringendo
 Imports: 
     sessioninfo,
     stats
 Encoding: UTF-8
-Packaged: 2023-11-09 15:39:39.504348
+Packaged: 2023-11-10 11:16:26.141913
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
